--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
                 </ul>
             </div>
         </nav>
-        <h2>Experiencia</h2>
-                <ul>
-                    <li>Experiencia 1</li>
-                    <li>Experiencia 2</li>
-                </ul>
+        <section>
+            <h2>Experiencia</h2>
+            <ul>
+                <li>Experiencia 1</li>
+                <li>Experiencia 2</li>
+            </ul>
+        </section>
         <footer>
             <h5>Deja tu info de contacto:</h5>
             <input type="email" placeholder="Deja tu Email">
